from sqlmodel import SQLModel, Field, Relationship
from typing import Optional, List
from datetime import datetime


class EstadoPedido(SQLModel, table=True):
    codigo: str = Field(primary_key=True, max_length=20)
    descripcion: str = Field(max_length=80)
    orden: int
    es_terminal: bool = False


class FormaPago(SQLModel, table=True):
    codigo: str = Field(primary_key=True, max_length=30)
    descripcion: str = Field(max_length=80)
    activo: bool = True


class Pedido(SQLModel, table=True):
    id: Optional[int] = Field(default=None, primary_key=True)
    usuario_id: Optional[int] = Field(default=None, foreign_key="usuario.id")
    direccion_id: Optional[int] = Field(default=None, foreign_key="direccionentrega.id")
    estado_codigo: str = Field(foreign_key="estadopedido.codigo")
    forma_pago_codigo: str = Field(foreign_key="formapago.codigo")

    subtotal: float = Field(default=0.0)
    descuento: float = Field(default=0.0)
    costo_envio: float = Field(default=0.0)
    total: float = Field(default=0.0)
    notas: Optional[str] = None
    created_at: datetime = Field(default_factory=datetime.utcnow)
    updated_at: datetime = Field(default_factory=datetime.utcnow)

    detalles: List["DetallePedido"] = Relationship(back_populates="pedido")
    historial: List["HistorialEstadoPedido"] = Relationship(back_populates="pedido")


class DetallePedido(SQLModel, table=True):
    pedido_id: int = Field(foreign_key="pedido.id", primary_key=True)
    producto_id: int = Field(foreign_key="producto.id", primary_key=True)
    cantidad: int = Field(ge=1)

    nombre_producto_snap: str = Field(max_length=150)
    precio_unitario_snap: float = Field(ge=0.0)
    subtotal_snap: float
    created_at: datetime = Field(default_factory=datetime.utcnow)
    
    pedido: "Pedido" = Relationship(back_populates="detalles")


class HistorialEstadoPedido(SQLModel, table=True):
    id: Optional[int] = Field(default=None, primary_key=True)
    pedido_id: int = Field(foreign_key="pedido.id")
    estado_desde: Optional[str] = Field(default=None, foreign_key="estadopedido.codigo")
    estado_hacia: str = Field(foreign_key="estadopedido.codigo")
    usuario_id: Optional[int] = Field(default=None, foreign_key="usuario.id")
    motivo: Optional[str] = None
    created_at: datetime = Field(default_factory=datetime.utcnow)

    pedido: "Pedido" = Relationship(back_populates="historial")
